[tool.poetry]
name = "final"
version = "0.1.0"
description = ""
authors = ["Oraly Pena Valdez <onpvaldez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
